fix three bugs: - console cannot select text when private copy - Style squeezing problem of the filter button on small screens in webconsole - Modify the union regexp

--- a/src/web-console/assets/styles/components/nav-search.css
+++ b/src/web-console/assets/styles/components/nav-search.css
@@ -3,11 +3,16 @@
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: nowrap;
-	width: 100%;
+	/*width: 100%;*/
 	height: 40px;
 	border-radius: 4px;
 	user-select: none;
 	box-sizing: border-box;
+}
+
+.nav-search .search-btn {
+	display: flex;
+	align-items: center;
 }
 
 .nav-search .left-line-item,
